@@ -5,6 +5,7 @@ Pending changes in the mainline
 * Fix incoming DICOM C-Store filtering for JPEG-LS transfer syntaxes
 * Fix OrthancPluginHttpClient() to return the HTTP status on errors
 * Fix HTTPS requests to sites using a certificate encrypted with ECDSA
+* Fix handling of incoming C-FIND queries containing Generic Group Length (*, 0x0000)
 
 
 Version 1.4.1 (2018-07-17)
